<resources>
    <string name="app_name">Happy Fooding</string>
    <string name="st">TODO</string>
    <string name="slog">Your very own online food service!</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="_880">+88</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="conf">Confirm</string>
    <string name="resend_code">Resend Code</string>
    <string name="title_activity_uprofile">UProfile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JJ</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="food_name">Food Name</string>
    <string name="title_activity_admin_home">AdminHome</string>
    <string name="title_activity_admin_tracking_order">AdminTrackingOrder</string>
    <string name="chat_input">Enter message here!</string>
    <string name="chat_logout">Logout</string>
    <string name="title_activity_location">Map</string>


</resources>
